refactor: id 를 articleId로 변경, comment 및 product 포함
