# mission3/src/article/commands/delete-article/delete-article.controller.js
@@ -3,8 +3,8 @@ import { AppError } from '../../../utils/index.js';
 import { asyncHandler } from '../../../utils/index.js';
 
 export const deleteArticleController = asyncHandler(async (req, res) => {
-  const { id } = req.validatedParams;
-  const article = await deleteArticleService(id);
+  const { articleId } = req.validatedParams;
+  const article = await deleteArticleService(articleId);
   if (!article) throw new AppError('게시글을 찾을 수 없음', 404);
   res.status(200).json({ message: '게시글 삭제 성공' });
 });
