# mission3/src/article/commands/get-article/get-article.controller.js
@@ -3,8 +3,8 @@ import { AppError } from '../../../utils/AppError.js';
 import { asyncHandler } from '../../../utils/asyncHandler.js';
 
 export const getArticleController = asyncHandler(async (req, res) => {
-  const { id } = req.validatedParams;
-  const article = await getArticleService(id);
+  const { articleId } = req.validatedParams;
+  const article = await getArticleService(articleId);
   if (!article) throw new AppError('게시글을 찾을 수 없음', 404);
   res.json(article);
 });
