# mission3/src/comment/commands/delete-comment/delete-comment.controller.js
@@ -3,8 +3,8 @@ import { AppError } from '../../../utils/index.js';
 import { asyncHandler } from '../../../utils/index.js';
 
 export const deleteCommentController = asyncHandler(async (req, res) => {
-  const { id } = req.validatedParams;
-  const comment = await deleteCommentService(id);
+  const { commentId } = req.validatedParams;
+  const comment = await deleteCommentService(commentId);
   if (!comment) throw new AppError('상품을 찾을 수 없음', 404);
   res.status(200).json({ message: '상품 삭제 성공' });
 });
