# mission3/src/comment/commands/get-comment/get-comment.controller.js
@@ -3,8 +3,8 @@ import { AppError } from '../../../utils/AppError.js';
 import { asyncHandler } from '../../../utils/asyncHandler.js';
 
 export const getCommentController = asyncHandler(async (req, res) => {
-  const { id } = req.validatedParams;
-  const comment = await getCommentService(id);
+  const { commentId } = req.validatedParams;
+  const comment = await getCommentService(commentId);
   if (!comment) throw new AppError('댓글을 찾을 수 없음', 404);
   res.json(comment);
 });
