# mission3/src/docs/openapi-resolved.json
@@ -890,17 +890,18 @@
         }
       },
       "commentId": {
-        "name": "id",
+        "name": "commentId",
         "in": "path",
         "required": true,
         "description": "댓글 ID",
         "schema": {
           "type": "integer",
-          "example": 1
+          "example": 1,
+          "minimum": 1
         }
       },
       "productId": {
-        "name": "id",
+        "name": "productId",
         "in": "path",
         "required": true,
         "description": "상품 ID",
@@ -910,12 +911,13 @@
         }
       },
       "articleId": {
-        "name": "id",
+        "name": "articleId",
         "in": "path",
         "required": true,
         "description": "게시글 ID",
         "schema": {
           "type": "integer",
+          "minimum": 1,
           "example": 1
         }
       }
