# mission3/src/product/commands/delete-product/delete-product.schema.js
@@ -1,9 +1,9 @@
 import { z } from 'zod';
 
 export const deleteProductSchema = z.object({
-  id: z
+  productId: z
     .string()
     .regex(/^\d+$/, { message: 'ID는 숫자여야 합니다.' })
     .transform(Number)
-    .refine((id) => id > 0, { message: 'ID는 1 이상의 숫자여야 합니다.' }),
+    .refine((productId) => productId > 0, { message: 'ID는 1 이상의 숫자여야 합니다.' }),
 });
