# mission3/src/product/commands/get-product/get-product.schema.js
@@ -1,7 +1,7 @@
 import { z } from 'zod';
 
 export const getProductSchema = z.object({
-  id: z.coerce.number().int().positive({
+  productId: z.coerce.number().int().positive({
     message: 'id는 1 이상의 정수여야 합니다.'
   })
 });
